--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+   
 </head>
 <body>
-    <h1>Create A Todo List By Clicking The Button Below</h1>
-    <a href="/todos"> New Todo List</a>
+    <header>
+        <section class="min-h-[300px] text-4xl ...  text-center ... inline-block align-middle ... bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500 ...">
+            <h1 class="heading ">Create A Todo List By Clicking The Button Below</h1>
+
+        </section>
+        <div>
+           <a href="/todos"><button type="button" class="btns bg-sky-500 hover:bg-sky-700 ... rounded-lg mt-5">Todo List</button></a> 
+
+        </div>
+    </header>
+ 
+    
 </body>
 </html>
