--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Todo App</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+    
    
 </head>
 <body>
@@ -16,12 +16,25 @@
             <h1 class="heading ">Create A Todo List By Clicking The Button Below</h1>
 
         </section>
-        <div>
+        <!-- <div>
            <a href="/todos"><button type="button" class="btns bg-sky-500 hover:bg-sky-700 ... rounded-lg mt-5">Todo List</button></a> 
 
-        </div>
+        </div> -->
+        <section class="flex bg-slate-300">
+           <div class="w-full">
+            <a href="/login"><button class="bg-slate-200 w-full hover:bg-violet-600"> Login</button></a>
+           </div> 
+           <div class="w-full ">
+            <a  href="/signup"> <button class="bg-slate-100 w-full hover:bg-sky-500">Signup</button></a>
+           </div>
+          </section>
+       
     </header>
+
+    
+
  
     
 </body>
 </html>
+
