added the favicon

--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -7,6 +7,7 @@
     <title>Todo App</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="cover.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,8 +46,10 @@
             <h2 class="ml-5">Things left to do: <%= left %></h2>
         </section>
     </section>
-   
-    <a href="/logout">Logout</a>
+    <div >
+        <button class="bg-cyan-500 hover:bg-cyan-600 ... p-1.5 mt-4 rounded-lg font-semibold "><a href="/logout">Logout</a></button>
+    </div>
+    
    
 
   
